实现了ncgm模型的正向传播过程

--- a/model-test.ipynb
+++ b/model-test.ipynb
@@ -8,7 +8,12 @@
    "source": [
     "import torch\n",
     "from torch import nn\n",
-    "from torchvision import models as CVModels"
+    "import tensorwatch as tw\n",
+    "from config import Config\n",
+    "from data.load import TableDataLoader\n",
+    "from load import load\n",
+    "from model.cmha import CompressedMultiHeadAttention\n",
+    "args = Config('./configs/ncgm.yaml')"
    ]
   },
   {
@@ -20,15 +25,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tanknee/miniforge3/envs/tsr/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-      "  warnings.warn(\n",
-      "/Users/tanknee/miniforge3/envs/tsr/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
-      "  warnings.warn(msg)\n"
+      "2023-04-10 11:39:10.869 | DEBUG    | data.scitsr:__init__:28 - Word2vec loaded from /Volumes/Disk/Dataset/word2vec/GoogleNews-vectors-negative300.bin\n",
+      "2023-04-10 11:39:11.034 | INFO     | data.load:get_dataloader:27 - Dataset SciTSR loaded\n"
      ]
     }
    ],
    "source": [
-    "resnet18 = CVModels.resnet18(pretrained=True)"
+    "# tr_dl = TableDataLoader(args, \"train\")\n",
+    "# table_train_dl = tr_dl.get_dataloader()"
    ]
   },
   {
@@ -37,22 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backbone = nn.Sequential(\n",
-    "    resnet18.conv1,\n",
-    "    resnet18.bn1,\n",
-    "    resnet18.relu,\n",
-    "    resnet18.maxpool,\n",
-    "    resnet18.layer1,\n",
-    "    nn.Conv2d(64, 64, 3, padding=1),\n",
-    "    nn.BatchNorm2d(64),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Conv2d(64, 64, 3, padding=1),\n",
-    "    nn.BatchNorm2d(64),\n",
-    "    nn.ReLU(),\n",
-    "    nn.Conv2d(64, 64, 3, padding=1),\n",
-    "    nn.BatchNorm2d(64),\n",
-    "    nn.ReLU()\n",
-    ")\n"
+    "model, criterion, optimizer = load(args)"
    ]
   },
   {
@@ -61,137 +50,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appearance = torch.randn(8, 3, 512, 512)"
+    "# for batch in table_train_dl:\n",
+    "#     geometry, appearance, content, bounding_box, structure = batch\n",
+    "#     # save batch pkl\n",
+    "#     torch.save(batch, 'batch.pkl')\n",
+    "#     # model(geometry, appearance, content, bounding_box)\n",
+    "#     break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnn_feat = backbone(appearance)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 64, 128, 128])"
+       "(tensor([[[ -6.8748,   0.1133],\n",
+       "          [ -6.4302,   1.0301],\n",
+       "          [-12.8182,   3.1024],\n",
+       "          ...,\n",
+       "          [ -0.0384,  -0.0364],\n",
+       "          [ -0.0384,  -0.0364],\n",
+       "          [ -0.0384,  -0.0364]]], grad_fn=<ViewBackward0>),\n",
+       " tensor([[[ 0.3346,  1.4468],\n",
+       "          [ 2.7464,  2.7369],\n",
+       "          [ 5.8497,  5.1816],\n",
+       "          ...,\n",
+       "          [-0.0601,  0.0170],\n",
+       "          [-0.0601,  0.0170],\n",
+       "          [-0.0601,  0.0170]]], grad_fn=<ViewBackward0>),\n",
+       " tensor([[[ 1.7965,  1.8060],\n",
+       "          [ 2.6297,  3.6724],\n",
+       "          [ 4.1441, 10.4329],\n",
+       "          ...,\n",
+       "          [ 0.0125,  0.0795],\n",
+       "          [ 0.0125,  0.0795],\n",
+       "          [ 0.0125,  0.0795]]], grad_fn=<ViewBackward0>),\n",
+       " tensor([[[ 0.0000e+00,  0.0000e+00,  6.5944e+00,  ..., -1.7188e-01,\n",
+       "            2.5474e-02, -3.2076e-02],\n",
+       "          [ 0.0000e+00,  0.0000e+00,  4.9054e+01,  ..., -1.7188e-01,\n",
+       "            2.5474e-02, -3.2076e-02],\n",
+       "          [ 0.0000e+00,  0.0000e+00,  1.3245e+02,  ..., -1.7188e-01,\n",
+       "            2.5474e-02, -3.2076e-02],\n",
+       "          ...,\n",
+       "          [ 0.0000e+00,  2.0565e-01,  3.3878e-01,  ..., -1.8735e-01,\n",
+       "           -5.3697e-02, -2.8541e-02],\n",
+       "          [ 0.0000e+00,  2.0565e-01,  3.3878e-01,  ..., -1.8735e-01,\n",
+       "           -5.3697e-02, -2.8541e-02],\n",
+       "          [ 0.0000e+00,  2.0565e-01,  3.3878e-01,  ..., -1.8735e-01,\n",
+       "           -5.3697e-02, -2.8541e-02]]], grad_fn=<ViewBackward0>))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cnn_feat.shape"
+    "batch = torch.load('batch.pkl')\n",
+    "geometry, appearance, content, bounding_box, structure = batch\n",
+    "cell_output, row_output, col_output, emb_pairs = model(geometry, appearance, content, bounding_box)\n",
+    "criterion(cell_output, row_output, col_output, emb_pairs, structure)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bounding_box = torch.randn(10, 4)\n",
-    "boxes = []\n",
-    "for i in range(8):\n",
-    "    boxes.append(bounding_box)"
+    "cmha = CompressedMultiHeadAttention(args=args)\n",
+    "g = torch.randn(1, 500, 64)\n",
+    "a = torch.randn(1, 500 ** 2, 64)\n",
+    "c = torch.randn(1, 500 ** 2, 64)\n",
+    "o = cmha(g, a, c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchvision.ops import roi_align\n",
-    "\n",
-    "# bounding_box = torch.randn(10, 4)\n",
-    "# # 重复8次\n",
-    "# bounding_box = bounding_box.repeat(8, 1)\n",
-    "\n",
-    "\n",
-    "align_feat = roi_align(cnn_feat, boxes, 2)"
+    "fc = nn.Sequential(\n",
+    "            nn.Linear(64*3*2, 256),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(256, 2),\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 64, 128, 128])"
+       "torch.Size([1, 250000, 2])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cnn_feat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([80, 64, 2, 2])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "align_feat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fc=nn.Sequential(\n",
-    "    nn.Linear(2 ** 2 * 64, 64),\n",
-    "    nn.ReLU(),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([8, 10, 64])"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get shape of align_feat\n",
-    "fc(align_feat.view(align_feat.shape[0], -1)).view(cnn_feat.shape[0], -1, 64).shape"
+    "a = torch.randn(1, 500 ** 2, 64*3*2)\n",
+    "fc(a).shape"
    ]
   }
  ],
