--- a/model-test.ipynb
+++ b/model-test.ipynb
@@ -25,8 +25,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-10 11:39:10.869 | DEBUG    | data.scitsr:__init__:28 - Word2vec loaded from /Volumes/Disk/Dataset/word2vec/GoogleNews-vectors-negative300.bin\n",
-      "2023-04-10 11:39:11.034 | INFO     | data.load:get_dataloader:27 - Dataset SciTSR loaded\n"
+      "2023-04-10 14:53:11.942 | DEBUG    | data.scitsr:__init__:28 - Word2vec loaded from /Volumes/Disk/Dataset/word2vec/GoogleNews-vectors-negative300.bin\n",
+      "2023-04-10 14:53:12.127 | INFO     | data.load:get_dataloader:27 - Dataset SciTSR loaded\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# for batch in table_train_dl:\n",
-    "#     geometry, appearance, content, bounding_box, structure = batch\n",
+    "#     # geometry, appearance, content, bounding_box, structure = batch\n",
     "#     # save batch pkl\n",
     "#     torch.save(batch, 'batch.pkl')\n",
     "#     # model(geometry, appearance, content, bounding_box)\n",
@@ -60,58 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[[ -6.8748,   0.1133],\n",
-       "          [ -6.4302,   1.0301],\n",
-       "          [-12.8182,   3.1024],\n",
-       "          ...,\n",
-       "          [ -0.0384,  -0.0364],\n",
-       "          [ -0.0384,  -0.0364],\n",
-       "          [ -0.0384,  -0.0364]]], grad_fn=<ViewBackward0>),\n",
-       " tensor([[[ 0.3346,  1.4468],\n",
-       "          [ 2.7464,  2.7369],\n",
-       "          [ 5.8497,  5.1816],\n",
-       "          ...,\n",
-       "          [-0.0601,  0.0170],\n",
-       "          [-0.0601,  0.0170],\n",
-       "          [-0.0601,  0.0170]]], grad_fn=<ViewBackward0>),\n",
-       " tensor([[[ 1.7965,  1.8060],\n",
-       "          [ 2.6297,  3.6724],\n",
-       "          [ 4.1441, 10.4329],\n",
-       "          ...,\n",
-       "          [ 0.0125,  0.0795],\n",
-       "          [ 0.0125,  0.0795],\n",
-       "          [ 0.0125,  0.0795]]], grad_fn=<ViewBackward0>),\n",
-       " tensor([[[ 0.0000e+00,  0.0000e+00,  6.5944e+00,  ..., -1.7188e-01,\n",
-       "            2.5474e-02, -3.2076e-02],\n",
-       "          [ 0.0000e+00,  0.0000e+00,  4.9054e+01,  ..., -1.7188e-01,\n",
-       "            2.5474e-02, -3.2076e-02],\n",
-       "          [ 0.0000e+00,  0.0000e+00,  1.3245e+02,  ..., -1.7188e-01,\n",
-       "            2.5474e-02, -3.2076e-02],\n",
-       "          ...,\n",
-       "          [ 0.0000e+00,  2.0565e-01,  3.3878e-01,  ..., -1.8735e-01,\n",
-       "           -5.3697e-02, -2.8541e-02],\n",
-       "          [ 0.0000e+00,  2.0565e-01,  3.3878e-01,  ..., -1.8735e-01,\n",
-       "           -5.3697e-02, -2.8541e-02],\n",
-       "          [ 0.0000e+00,  2.0565e-01,  3.3878e-01,  ..., -1.8735e-01,\n",
-       "           -5.3697e-02, -2.8541e-02]]], grad_fn=<ViewBackward0>))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch = torch.load('batch.pkl')\n",
-    "geometry, appearance, content, bounding_box, structure = batch\n",
-    "cell_output, row_output, col_output, emb_pairs = model(geometry, appearance, content, bounding_box)\n",
-    "criterion(cell_output, row_output, col_output, emb_pairs, structure)\n"
+    "geometry, appearance, content, bounding_box, row_adj_matrix, col_adj_matrix, cell_adj_matrix, structure = batch\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_output, row_output, col_output, emb_pairs = model(geometry, appearance, content, bounding_box)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion(cell_output, row_output, col_output, emb_pairs, structure)"
    ]
   },
   {
@@ -125,40 +97,6 @@
     "a = torch.randn(1, 500 ** 2, 64)\n",
     "c = torch.randn(1, 500 ** 2, 64)\n",
     "o = cmha(g, a, c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fc = nn.Sequential(\n",
-    "            nn.Linear(64*3*2, 256),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(256, 2),\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 250000, 2])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = torch.randn(1, 500 ** 2, 64*3*2)\n",
-    "fc(a).shape"
    ]
   }
  ],
