重新设计了loss函数，补全了train文件

--- a/experiments/model-test.ipynb
+++ b/experiments/model-test.ipynb
@@ -137,6 +137,156 @@
     "c = torch.randn(1, 500 ** 2, 64)\n",
     "o = cmha(g, a, c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_split = torch.randn((2,500*500,2,192))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_split = X_split.view(-1, 2, X_split.shape[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.2274, -0.5370,  1.8045,  ..., -0.7050,  0.2152,  0.8532],\n",
+       "         [-0.6965, -0.2617,  2.2837,  ..., -0.9323,  0.1051,  0.8985]],\n",
+       "\n",
+       "        [[ 0.2821, -1.0761,  0.7567,  ..., -0.0681,  1.2673, -0.7953],\n",
+       "         [ 0.9313,  0.7097,  0.7224,  ..., -0.8480, -0.8905,  1.3118]],\n",
+       "\n",
+       "        [[ 1.4729,  0.6691, -0.8735,  ..., -0.9526, -0.4732,  0.4654],\n",
+       "         [ 0.7255,  0.8529, -1.7535,  ...,  0.4913,  0.6657, -0.3153]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[-0.6038, -0.6898, -0.8469,  ..., -0.0729, -0.7892, -1.0958],\n",
+       "         [ 1.1079,  1.4767,  1.0536,  ..., -1.1476, -0.9632, -2.1035]],\n",
+       "\n",
+       "        [[ 0.1572,  0.3295, -0.6979,  ..., -1.1455,  1.7771,  1.8045],\n",
+       "         [-1.4827, -0.2279,  0.7061,  ...,  1.1584, -1.1652,  0.2748]],\n",
+       "\n",
+       "        [[-2.6475,  0.6065,  0.8294,  ...,  0.6110, -1.4431,  0.4180],\n",
+       "         [ 1.2187, -0.0216,  0.3486,  ..., -0.2644,  0.6000, -0.1866]]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([500000, 192])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_split[:, 1, :] - X_split[:, 0, :]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = torch.randn((2, 2, 4), requires_grad=True)\n",
+    "target = torch.randint(2, (2,4), dtype=torch.int64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[ 1.1733,  0.1229, -0.2633, -1.5430],\n",
+       "          [ 0.8043, -0.9127,  0.3433,  0.9226]],\n",
+       " \n",
+       "         [[ 1.2811, -0.0656,  3.0065, -1.4107],\n",
+       "          [ 0.4100, -1.5531, -0.5981,  0.7235]]], requires_grad=True),\n",
+       " tensor([[1, 0, 1, 0],\n",
+       "         [1, 1, 0, 1]]))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input, target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = torch.tensor([[[1,0,1,0],[0,1,0,1]], [[1,1,0,1],[0,0,1,0]]], dtype=torch.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.3133)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.nn.functional.cross_entropy(input, target)"
+   ]
   }
  ],
  "metadata": {
@@ -155,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
